[package]
name = "hopper-schema"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs <contact@bluefootlabs.com>", "MoonManQuark"]
description = "Schema export and ABI fingerprinting for Hopper zero-copy state framework. Layout manifests, schema diff, migration checks."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://hopperzero.dev"
documentation = "https://docs.rs/hopper-schema"
readme = "README.md"
keywords = ["solana", "zero-copy", "schema", "idl", "abi"]
categories = ["no-std"]

[lib]
name = "hopper_schema"

[dependencies]
hopper-core = { path = "../hopper-core", version = "0.1.0", default-features = false }
hopper-runtime = { path = "../hopper-runtime", version = "0.1.0", default-features = false }

[features]
default = ["hopper-native-backend", "receipt", "policy"]
receipt = ["hopper-core/receipt"]
policy = ["hopper-core/policy"]
hopper-native-backend = [
	"hopper-core/hopper-native-backend",
	"hopper-runtime/hopper-native-backend",
]
pinocchio-backend = [
	"hopper-core/pinocchio-backend",
	"hopper-runtime/pinocchio-backend",
]
solana-program-backend = [
	"hopper-core/solana-program-backend",
	"hopper-runtime/solana-program-backend",
]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("receipt", "policy"))',
] }
