[package]
name = "hopper-solana"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs"]
description = "Solana integration layer for Hopper. SPL Token/Mint zero-copy readers, Token-2022 screening, CPI guards, token account helpers."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
documentation = "https://docs.rs/hopper-solana"
readme = "README.md"
keywords = ["solana", "zero-copy", "spl-token", "cpi", "hopper-native"]
categories = ["no-std"]

[lib]
name = "hopper_solana"

[lints]
workspace = true

[dependencies]
hopper-core = { workspace = true }
hopper-runtime = { workspace = true }
five8_const = { workspace = true }
