[package]
name = "hopper-solana"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs <contact@bluefootlabs.com>", "MoonManQuark"]
description = "Solana integration layer for Hopper. SPL Token/Mint zero-copy readers, Token-2022 screening, CPI guards, token account helpers."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://hopperzero.dev"
documentation = "https://docs.rs/hopper-solana"
readme = "README.md"
keywords = ["solana", "zero-copy", "spl-token", "cpi", "hopper-native"]
categories = ["no-std"]

[lib]
name = "hopper_solana"

[lints]
workspace = true

[dependencies]
hopper-core = { path = "../hopper-core", version = "0.1.0", default-features = false }
hopper-runtime = { path = "../hopper-runtime", version = "0.1.0", default-features = false }
hopper-system = { path = "../hopper-system", version = "0.1.0", default-features = false }
hopper-token = { path = "../hopper-token", version = "0.1.0", default-features = false }
five8_const = { workspace = true }

[features]
default = ["hopper-native-backend"]
hopper-native-backend = [
	"hopper-core/hopper-native-backend",
	"hopper-runtime/hopper-native-backend",
	"hopper-system/hopper-native-backend",
	"hopper-token/hopper-native-backend",
]
pinocchio-backend = [
	"hopper-core/pinocchio-backend",
	"hopper-runtime/pinocchio-backend",
	"hopper-system/pinocchio-backend",
	"hopper-token/pinocchio-backend",
]
solana-program-backend = [
	"hopper-core/solana-program-backend",
	"hopper-runtime/solana-program-backend",
	"hopper-system/solana-program-backend",
	"hopper-token/solana-program-backend",
]
