[workspace]
members = [
    "hopper-token",
    "hopper-token-2022",
    "hopper-associated-token",
    "hopper-metaplex",
]
resolver = "2"

[workspace.dependencies]
hopper-native = { path = "../Hopper-Solana-Zero-copy-State-Framework/crates/hopper-native", default-features = false }
hopper-runtime = { path = "../hopper-runtime", default-features = false }
hopper-solana = { path = "../Hopper-Solana-Zero-copy-State-Framework/crates/hopper-solana", default-features = false }
hopper-system = { path = "../Hopper-Solana-Zero-copy-State-Framework/crates/hopper-system", default-features = false }
hopper-token = { path = "hopper-token", default-features = false }
five8_const = "0.1"
sha2-const-stable = "0.1"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_arch, values("bpf"))',
] }
