[package]
name = "hopper-staking"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs <contact@bluefootlabs.com>", "MoonManQuark"]
description = "Staking reward accumulators for Hopper: MasterChef-style reward-per-token, emission rates, reward debt tracking. Zero-copy, no_std, no_alloc, BPF-safe."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
documentation = "https://docs.rs/hopper-staking"
readme = "../../README.md"
keywords = ["solana", "zero-copy", "staking", "rewards", "defi"]
categories = ["no-std"]

[lib]
name = "hopper_staking"

[dependencies]
hopper-runtime = { workspace = true }
