[package]
name = "hopper-svm-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs <contact@bluefootlabs.com>", "MoonManQuark"]
description = "C-ABI bindings for hopper-svm. The foundation for the TypeScript / Python language bindings — exposes a stable extern \"C\" surface around the in-process Solana execution harness."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://hopperzero.dev"
documentation = "https://docs.rs/hopper-svm-ffi"
readme = "README.md"
keywords = ["solana", "ffi", "test", "svm", "hopper"]
categories = ["development-tools::ffi", "development-tools::testing"]

# Tier 4 (deferred Tier 4 from the SVM roadmap): TypeScript /
# Python language bindings live on top of this crate. The
# crate's only job is to expose `hopper-svm`'s public surface
# through a minimal `extern "C"` API the host languages can
# bind via koffi / napi-rs (Node) or pyo3 / ctypes (Python).
#
# Two output shapes:
# - cdylib for dynamic loading by host-language FFI runtimes
# - staticlib for embedding in compiled host extensions
#
# Both are opt-in via `cargo build --release -p hopper-svm-ffi`;
# the crate is excluded from the default workspace `cargo test`
# unless you pass `-p hopper-svm-ffi --features bpf-execution`.
[lib]
name = "hopper_svm_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
# Forward the underlying `hopper-svm` BPF feature so the FFI
# wrapper exposes the full Phase 2 surface. Off by default so
# the host-language packages can pick the lighter Phase-1-only
# build for size-constrained distributions.
bpf-execution = ["hopper-svm/bpf-execution"]

[dependencies]
hopper-svm = { path = "../hopper-svm", version = "0.1.0" }
solana-sdk = "2.1"
