[package]
name = "hopper-svm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs <contact@bluefootlabs.com>", "MoonManQuark"]
description = "Hopper-native in-process Solana execution harness for testing Hopper programs without a validator."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://hopperzero.dev"
documentation = "https://docs.rs/hopper-svm"
readme = "README.md"
keywords = ["solana", "test", "svm", "hopper", "harness"]
categories = ["development-tools::testing"]

# Hopper-native execution engine. Owns the harness, the syscall layer
# (Phase 2), CPI dispatch (Phase 2.1), the compute meter, the log
# buffer, the sysvar surface, the built-in program registry, and all
# Hopper-aware result decoding. Two layers:
#
# - **Phase 1 (default features)**: built-in program execution path
#   only. Zero dependency on any external SVM. The system program
#   ships as the reference built-in, plus user-registered Rust
#   simulators for unit-test scenarios.
#
# - **Phase 2 (`bpf-execution` feature)**: real BPF program
#   execution via `solana-sbpf` — Anza's canonical eBPF interpreter,
#   the foundation Mollusk and Agave both build on (depending on
#   sbpf isn't borrowing from a competitor; it's the standard
#   library for eBPF-on-Solana). Feature-gated and OFF BY DEFAULT
#   so the slim Phase 1 build path is the out-of-the-box experience.
#   Enable with `cargo test --features bpf-execution`.

[features]
default = []
# **DEPRECATED**. Direct `solana-sbpf` execution path. The
# `bpf-execution` engine in `src/bpf/*` was authored against an
# older `solana-sbpf` (pre-0.20) and the API has drifted out from
# under it. Rather than rewrite every syscall against the new sbpf
# surface, the canonical BPF execution path is now `agave-runtime`,
# which uses `solana-bpf-loader-program` (which wraps `solana-sbpf`
# correctly and tracks Anza's release cadence). The feature flag
# remains so existing call sites that depend on `LoaderKind` /
# `LoadedProgram` keep typing; the dispatcher falls through to the
# Agave engine when present, otherwise surfaces a clear diagnostic.
bpf-execution = ["dep:solana-sbpf"]

# Enable the Agave-runtime execution path. Replaces the direct
# `solana-sbpf` invocation with `solana-program-runtime` +
# `solana-bpf-loader-program`, so syscall behaviour, CPI dispatch,
# sysvar handling, and account input/output serialization match
# mainnet exactly (the same Agave crates the validator runs).
# OFF BY DEFAULT because the Agave dep tree is large; enable with
# `cargo test --features agave-runtime`.
agave-runtime = [
    "dep:solana-program-runtime",
    "dep:solana-bpf-loader-program",
    "dep:solana-compute-budget",
    "dep:solana-timings",
    "dep:solana-svm-callback",
    "dep:solana-svm-feature-set",
    "dep:solana-system-program",
]

[dependencies]
# Solana account / pubkey / instruction primitives. Used purely as
# wire-shape types — we don't run anything from solana-program-runtime
# or solana-bpf-loader-program.
solana-sdk = "2.1"
solana-program = "2.1"
solana-program-pack = "2"

# SPL programs (token factories). `dep`-only — no public re-exports
# beyond the explicit factory helpers so a user who doesn't touch
# tokens doesn't need to know about them.
spl-token = "8"
spl-token-2022 = "9"
spl-associated-token-account = "8"

# ── PDA derivation (Phase 2.1) ────────────────────────────────────
# SHA-256 of seeds + program_id + "ProgramDerivedAddress" gives a
# candidate; the Ed25519 curve-point check rejects on-curve
# candidates so PDAs are guaranteed not to have a corresponding
# private key. Both crates are tiny + Anza-vetted.
sha2 = "0.10"
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }

# ── Crypto syscalls (Phase 2.1) ───────────────────────────────────
# `sol_keccak256_` and `sol_blake3` delegate to these. Thin
# wrappers — Hopper owns the wire format, the published crate
# does the hashing.
#
# sha3 0.10 has both `Keccak256` (the legacy/Ethereum variant)
# and `Sha3_256`. Solana's `sol_keccak256_` is the LEGACY one,
# so we use `Keccak256`.
#
# `secp256k1 = "0.29"` powers `sol_secp256k1_recover_`. Default
# features include the recovery API (`recovery` feature).
sha3 = "0.10"
blake3 = "1"
secp256k1 = { version = "0.29", features = ["recovery"] }

# ── Phase 2 (feature-gated) ───────────────────────────────────────
# Anza's canonical eBPF interpreter. Pinned to the 0.20 series
# (0.20.0 shipped Apr 23, 2026). Optional; only pulled when the
# `bpf-execution` feature is enabled.
solana-sbpf = { version = "0.20", optional = true }

# ── Phase 3 / Agave runtime (feature-gated) ───────────────────────
# Real Agave validator components: the same `solana-program-runtime`,
# `solana-bpf-loader-program`, and `solana-compute-budget` crates the
# validator ships. Pinned to the 2.1 series to match `solana-sdk`;
# cargo's MSRV resolver picks 2.3.x at lock time as the latest 2.x
# the SDK transitively requires.
# Pulled only when the `agave-runtime` feature is enabled.
solana-program-runtime = { version = "2.1", optional = true }
solana-bpf-loader-program = { version = "2.1", optional = true }
solana-compute-budget = { version = "2.1", optional = true }
solana-timings = { version = "2.1", optional = true }
solana-svm-callback = { version = "2.1", optional = true }
solana-svm-feature-set = { version = "2.1", optional = true }

# Bundled built-in programs Agave exposes as native processors.
# Pulled in only under `agave-runtime`; the harness registers them
# in the `ProgramCacheForTxBatch` via `ProgramCacheEntry::new_builtin`
# so user instructions targeting the System Program ID dispatch
# through Agave's real implementation (no Hopper-side shim).
solana-system-program = { version = "2.1", optional = true }

# ── Build-environment shim ────────────────────────────────────────
# `solana-sdk` -> `solana-precompiles` -> `solana-secp256r1-program`
# pulls in `openssl-sys`. Vendoring openssl removes the Windows
# requirement that the developer have OpenSSL on PATH; on Linux/macOS
# the `vendored` feature is a no-op that builds the static archive
# from source. Same pattern hopper-cli already uses.
openssl = { version = "0.10", features = ["vendored"] }
