[package]
name = "hopper-system"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs <contact@bluefootlabs.com>", "MoonManQuark"]
description = "Hopper-owned System Program builder surface. Thin, no_std instruction builders over Hopper Runtime."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://hopperzero.dev"
documentation = "https://docs.rs/hopper-system"
readme = "README.md"
keywords = ["solana", "system-program", "cpi", "zero-copy", "hopper"]
categories = ["no-std"]

[lib]
name = "hopper_system"

[dependencies]
hopper-runtime = { path = "../hopper-runtime", version = "0.1.0", default-features = false }

[features]
default = ["hopper-native-backend"]
hopper-native-backend = ["hopper-runtime/hopper-native-backend"]
pinocchio-backend = ["hopper-runtime/pinocchio-backend"]
solana-program-backend = ["hopper-runtime/solana-program-backend"]

[lints]
workspace = true