[package]
name = "hopper-vesting"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BluefootLabs <contact@bluefootlabs.com>", "MoonManQuark"]
description = "Token vesting schedule calculations for Hopper. Linear with cliff, stepped/periodic unlocks, safe claimable amounts."
repository = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
homepage = "https://github.com/BluefootLabs/Hopper-Solana-Zero-copy-State-Framework"
documentation = "https://docs.rs/hopper-vesting"
readme = "../../README.md"
keywords = ["solana", "zero-copy", "vesting", "token", "defi"]
categories = ["no-std"]

[lib]
name = "hopper_vesting"

[dependencies]
hopper-runtime = { workspace = true }
