[package]
name = "hopper-nft-mint"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Reference Hopper NFT-mint program. Demonstrates the Metaplex Token Metadata builders (CreateMetadataAccountV3 + CreateMasterEditionV3) on top of an SPL mint, end to end. Closes the Quasar-parity Metaplex gap from AUDIT.md."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
hopper = { path = "../..", default-features = false, features = ["metaplex"] }

[features]
default = ["hopper-native-backend"]
hopper-native-backend = ["hopper/hopper-native-backend"]
legacy-pinocchio-compat = ["hopper/legacy-pinocchio-compat"]
solana-program-backend = ["hopper/solana-program-backend"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }
