[package]
name = "hopper-registry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
hopper = { path = "../..", default-features = false }

[features]
# Uses `check::graph` constraint helpers (`require_signer_at`,
# `require_writable_at`, etc), so the `advanced` umbrella, which
# gates the `graph` feature, must be on.
default = ["hopper-native-backend", "advanced"]
hopper-native-backend = ["hopper/hopper-native-backend"]
advanced = ["hopper/advanced"]
legacy-pinocchio-compat = ["hopper/legacy-pinocchio-compat"]
solana-program-backend = ["hopper/solana-program-backend"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }
